objects/zkfedex__CustomAddressSource__c.object
<CustomObject>
    <description>Custom Address Source stores the object and field mapping data allowing any standard or custom object to be used as a shipping data source.</description>
    <fields>
        <fullName>zkfedex__CityField__c</fullName>
        <description>The custom object field that represents the recipient city.</description>
        <inlineHelpText>The custom object field that represents the recipient city.</inlineHelpText>
        <label>City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CompanyNameField__c</fullName>
        <description>The custom object field that represents the recipient company name.</description>
        <inlineHelpText>The custom object field that represents the recipient company name.</inlineHelpText>
        <label>Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CountryField__c</fullName>
        <description>The custom object field that represents the recipient country code.</description>
        <inlineHelpText>The custom object field that represents the recipient country code.</inlineHelpText>
        <label>Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CustomAddressSourceObject__c</fullName>
        <label>Custom Address Source Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailField__c</fullName>
        <description>The custom object field that represents the recipient email address.</description>
        <inlineHelpText>The custom object field that represents the recipient email address.</inlineHelpText>
        <label>Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailRecipient3Field__c</fullName>
        <label>Email Recipient 3 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailRecipient4Field__c</fullName>
        <label>Email Recipient 4 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailRecipient5Field__c</fullName>
        <label>Email Recipient 5 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__IsResidenceField__c</fullName>
        <description>The custom object field that indicates whether the recipient address is a residence.</description>
        <inlineHelpText>The custom object field that indicates whether the recipient address is a residence.</inlineHelpText>
        <label>Is Residence Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__NameField__c</fullName>
        <description>The custom object field that represents the recipient name.</description>
        <inlineHelpText>The custom object field that represents the recipient name.</inlineHelpText>
        <label>Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PhoneField__c</fullName>
        <description>The custom object field that represents the recipient phone number.</description>
        <inlineHelpText>The custom object field that represents the recipient phone number.</inlineHelpText>
        <label>Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PostalCodeField__c</fullName>
        <description>The custom object field that represents the recipient zip/postal code.</description>
        <inlineHelpText>The custom object field that represents the recipient zip/postal code.</inlineHelpText>
        <label>Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceDeptNumberField__c</fullName>
        <label>Reference - Department Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceInvoiceNumberField__c</fullName>
        <label>Reference - Invoice Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferencePoNumberField__c</fullName>
        <label>Reference - P.O. Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceRmaNumberField__c</fullName>
        <label>Reference - RMA Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceYourReferenceField__c</fullName>
        <label>Reference - Your Reference Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShipmentObjectLookupField__c</fullName>
        <description>The field created on the Shipment object that is a lookup to the mapped custom object.</description>
        <inlineHelpText>The field created on the Shipment object that is a lookup to the mapped custom object.</inlineHelpText>
        <label>Shipment Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__StateField__c</fullName>
        <description>The custom object field that represents the recipient state/province.</description>
        <inlineHelpText>The custom object field that represents the recipient state/province.</inlineHelpText>
        <label>State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Street1TextLineField__c</fullName>
        <description>The custom object field that is a single text line that represents the first line of the recipient street.</description>
        <inlineHelpText>The custom object field that is a single text line that represents the first line of the recipient street.</inlineHelpText>
        <label>Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Street2TextLineField__c</fullName>
        <description>The custom object field that is a single text line that represents the second line of the recipient street.</description>
        <inlineHelpText>The custom object field that is a single text line that represents the second line of the recipient street.</inlineHelpText>
        <label>Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__StreetTextAreaField__c</fullName>
        <description>The custom object field that is a text area that represents the recipient street.</description>
        <inlineHelpText>The custom object field that is a text area that represents the recipient street.</inlineHelpText>
        <label>Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>FedEx Custom Address Source</label>
    <listViews>
        <fullName>zkfedex__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>